--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "slack-redirect"
   ],
   "author": "Amrish Kushwaha",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/openebs/slack-redirect/issues"
   },
